# gksu-polkit

./: .gitignore  HACKING  Makefile.am  README  THANKS  TODO  aclocal.m4  autogen.sh  configure.ac
common/: Makefile.am  gksu-environment.vala  gksu-write-queue.c  gksu-write-queue.h
data/: Makefile.am  common.variables  gksu.policy  org.gnome.gksu.policy
debian/: changelog  control  copyright  gksu-polkit.install  libgksu-polkit-dev.install  libgksu-polkit0.install  libgksu-polkit0.symbols  watch  watch.ex
doc/: Makefile.am
doc/reference/: Makefile.am  libgksu-polkit-docs.sgml  libgksu-polkit-sections.txt  libgksu-polkit.types
gksu/: Makefile.am  gksu-polkit.c
libgksu/: Makefile.am  gksu-polkit.h  gksu-process-error.h  gksu-process.c  gksu-process.h  libgksu-polkit-1.pc.in  libgksu.ver
mechanism/: Makefile.am  dbus-gksu-server.xml  gksu-controller.c  gksu-controller.h  gksu-error.h  gksu-polkit.conf  gksu-process.vala  gksu-server.c  gksu-server.h  gksu-server.vala  main.c  org.gnome.Gksu.service.in
po/: POTFILES.in
